--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>document</title>
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <link href="css/temp.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id = "root"></div>
+    <div id = "test"><h1>5조 화이팅</h1></div>
 
     <script src = "js/temp.js"></script>
     <script>
